# cxtfit

./: LICENSE.md  README.md  cxtfit_validation.xlsx  pyproject.toml  ~$cxtfit_validation.xlsx
.github/workflows/: pypi-package.yml
Notebooks/: Romberg.ipynb  Untitled.ipynb  fig7-13_case1.csv  fig7-13_case2.csv  fig7-13_case3.csv  fig7-14_case1.csv  fig7-14_case2.csv  fig7-14_case3.csv  fig7-14_case4.csv  fig7-14_case5.csv  fig7-14_case6.csv  goldstein.ipynb  leastsq.ipynb  stocde.ipynb
autotest/: conftest.py  test_cxtfit.py
cxtfit/: __init__.py  cxtfit.py  cxtmodel.py  cxtsim.py  detcde.py  stocde.py
cxtfit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cxtfit2/: CXTFIT2.FOR  DATA.FOR  DETCDE.FOR  FUNC1.FOR  FUNC2.FOR  INTEGRAL.FOR  MODEL.FOR  STOCDE.FOR  USER.FOR
examples/: cxtfit_examples.ipynb  test_cxtfit.py
examples/input/: FIG4-5.IN  FIG4-7.IN  FIG7-1.IN  FIG7-10.IN  FIG7-11.IN  FIG7-12.IN  FIG7-13.IN  FIG7-14.IN  FIG7-15.IN  FIG7-2A.IN  FIG7-2B.IN  FIG7-3A.IN  FIG7-3B.IN  FIG7-4.IN  FIG7-5.IN  FIG7-6A.IN  FIG7-6B.IN  FIG7-7A.IN  FIG7-7B.IN  FIG7-8.IN  FIG7-9A.IN  FIG7-9B.IN
